// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfobarWidgetsEditionTools component should render widgets edition tools disabled because the widgets are not dirty 1`] = `
<div
  class="footer"
>
  <button
    aria-disabled="true"
    class="wrapper mr-2 fill primary medium isDisabled"
    type="button"
  >
    <span
      class="content"
    >
      Save changes
    </span>
  </button>
  <button
    aria-disabled="true"
    class="wrapper fill secondary medium isDisabled"
    type="button"
  >
    <span
      class="content"
    >
      Cancel
    </span>
  </button>
</div>
`;

exports[`InfobarWidgetsEditionTools component should render widgets edition tools enabled because the widgets are dirty and not being saved 1`] = `
<div
  class="footer"
>
  <button
    aria-disabled="false"
    class="wrapper mr-2 fill primary medium"
    type="button"
  >
    <span
      class="content"
    >
      Save changes
    </span>
  </button>
  <button
    aria-disabled="false"
    class="wrapper fill secondary medium"
    type="button"
  >
    <span
      class="content"
    >
      Cancel
    </span>
  </button>
</div>
`;

exports[`InfobarWidgetsEditionTools component should render widgets edition tools loading and disabled, because the widgets are being saved 1`] = `
<div
  class="footer"
>
  <button
    aria-disabled="true"
    class="wrapper mr-2 fill primary medium isDisabled"
    type="button"
  >
    <svg
      class="LoadingSpinner--spinner--a8Lrf LoadingSpinner--gloom--BV3WA spinner"
      height="22"
      preserveAspectRatio="xMidYMid meet"
      role="status"
      viewBox="0 0 20 20"
      width="22"
    >
      <circle
        class="LoadingSpinner--dot--tnzt_"
        cx="10"
        cy="10"
        fill="none"
        r="6"
        stroke-width="2"
      />
      <circle
        class="LoadingSpinner--circle--OnNzl"
        cx="10"
        cy="10"
        fill="none"
        r="6"
        stroke-width="2"
      />
      <span
        class="sr-only"
      >
        Loading...
      </span>
    </svg>
    <span
      class="content"
    >
      Save changes
    </span>
  </button>
  <button
    aria-disabled="true"
    class="wrapper fill secondary medium isDisabled"
    type="button"
  >
    <svg
      class="LoadingSpinner--spinner--a8Lrf LoadingSpinner--gloom--BV3WA spinner"
      height="22"
      preserveAspectRatio="xMidYMid meet"
      role="status"
      viewBox="0 0 20 20"
      width="22"
    >
      <circle
        class="LoadingSpinner--dot--tnzt_"
        cx="10"
        cy="10"
        fill="none"
        r="6"
        stroke-width="2"
      />
      <circle
        class="LoadingSpinner--circle--OnNzl"
        cx="10"
        cy="10"
        fill="none"
        r="6"
        stroke-width="2"
      />
      <span
        class="sr-only"
      >
        Loading...
      </span>
    </svg>
    <span
      class="content"
    >
      Cancel
    </span>
  </button>
</div>
`;
